--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div class="container">
+   <!-- <div class="container">
                 <!-- display -->
         <button class="result">0</button>
                 <!-- clear/backspace -->
