--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Calculator</title>
 </head>
 <body>
-   <!-- <div class="container">
-                <!-- display -->
+	<div class="container">
+				<!-- display -->
         <button class="result">0</button>
                 <!-- clear/backspace -->
         <button class="bkSpace"><-</button>
